tests/compile-fail/empty-string.rs
#![feature(plugin)]
#![plugin(indoc)]

fn main() {
    indoc!("");
    //~^ argument must start with '\n'
}
